stuck on scope issue

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ main {
   justify-content: center;
 }
 
-.sub-cohort {
+.sub-cohort-lists {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
 }
